<resources>
    <string name="app_name">Place Manager</string>

    <!-- Strings Place Information -->
    <string name="place">Place</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="addressTitle">Address Title</string>
    <string name="addressFull">Address</string>
    <string name="elevation">Elevation (m)</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title_activity_place_list">PlaceListActivity</string>
    <string name="savePlaceBtn">Save Place</string>
    <string name="deletePlaceBtn">Delete Place</string>

    <!-- Strings Place List -->
    <string name="addPlaceBtn">Add Place</string>
    <string name="distanceBtn">Compare Distances</string>

    <!-- Distacne Activity -->
    <string name="place1">First Place:</string>
    <string name="place2">Second Place:</string>
    <string name="greatCircle">Great Circle (m):</string>
    <string name="initialHeading">Initial Heading (Bearing degrees):</string>
</resources>
